@@ -1,1 +1,1 @@
-#define VERSION	"Fourth Edition (20111003)"
+#define VERSION	"Fourth Edition (20111214)"
